@@ -1,0 +1,90 @@
+=pod
+
+=head1 NAME
+
+Fl::IntInput - Text Widget that Limits Users to Decimal Digits and Hex Numbers
+
+=head1 Synopsis
+
+    use Fl;
+    my $input = Fl::IntInput->new(0, 0, 100, 200, 'Hello, World!');
+
+=head1 Description
+
+The Fl::IntInput class represents a widget that only allows the user to type
+decimal digits (or hex numbers of the form 0xaef).
+
+=head1 Methods
+
+Fl::IntInput inherits from Fl::Input and Fl::Widget. On top of that, it
+exposes the following methods...
+
+=cut
+
+#include <FL/Fl_Int_Input.H>
+
+MODULE = Fl::IntInput     PACKAGE = Fl::IntInput  PREFIX = Fl_
+
+PROTOTYPES: DISABLE
+
+=pod
+
+=head2 new(...)
+
+    my $text_a = Fl::IntInput->new(0, 0, 250, 500, 'Important Stuff');
+    my $text_b = Fl::IntInput->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The widget's boxtype is FL_DOWN_BOX by default.
+
+The destructor removes the widget.
+
+=cut
+
+Fl_Int_Input *
+Fl_Int_Input::new( ... )
+    CASE: (items == 5 || items == 6)
+        CODE:
+            /*(int x, int y, int w, int h, char * label = $0)*/
+            char * label = "";
+            int x = (int)SvIV(ST(1));
+            int y = (int)SvIV(ST(2));
+            int w = (int)SvIV(ST(3));
+            int h = (int)SvIV(ST(4));
+            if (items == 6) label = (char *)SvPV_nolen(ST(5));
+            RETVAL = new Fl_Int_Input(x,y,w,h,label);
+        OUTPUT:
+            RETVAL
+
+void
+Fl_Int_Input::DESTROY()
+    CODE:
+        int refcount = SvREFCNT(SvRV(ST(0)));
+        if (refcount == 1) {
+            delete THIS;
+        }
+        else {
+            SvREFCNT_dec(ST(0));
+        }
+
+MODULE = Fl        PACKAGE = Fl
+
+BOOT:
+    set_isa("Fl::IntInput", "Fl::Input");
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
