@@ -253,6 +253,8 @@ INCLUDE: ../lib/Fl/Input.pod
 
     INCLUDE: ../lib/Fl/FloatInput.pod
 
+    INCLUDE: ../lib/Fl/IntInput.pod
+
     INCLUDE: ../lib/Fl/SecretInput.pod
 
 INCLUDE: ../lib/Fl/Chart.pod
