@@ -18,6 +18,7 @@
 #include <FL/Fl_Input.H>
 #include <FL/Fl_Secret_Input.H>
 #include <FL/Fl_Float_Input.H>
+#include <FL/Fl_Int_Input.H>
 
 const char * object2package (Fl_Widget * w) {
      /*Remember to add _most_ specific classes first*/
@@ -37,6 +38,7 @@ const char * object2package (Fl_Widget * w) {
      else if ( dynamic_cast<Fl_Group                *>(w) ) { package = "Fl::Group";  }
      else if ( dynamic_cast<Fl_Chart                *>(w) ) { package = "Fl::Chart";  }
 
+     else if ( dynamic_cast<Fl_Int_Input         *>(w) ) { package = "Fl::IntInput";  }
      else if ( dynamic_cast<Fl_Float_Input         *>(w) ) { package = "Fl::FloatInput";  }
      else if ( dynamic_cast<Fl_Secret_Input         *>(w) ) { package = "Fl::SecretInput";  }
      else if ( dynamic_cast<Fl_Input                *>(w) ) { package = "Fl::Input";  }
